[package]
name = "trx_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="*"
hex="*"
tokio={version="*",features=["full"]}
tracing={version="*"}
tracing-subscriber = "0.2.0"
serde_json={version="*"}
tonic = "0.7.2"
prost-types = "0.10"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
prost = "0.10"
async-stream = "0.3"
chrono="*"
sha2 = "0.9"
sha3 = "0.9"
libsecp256k1 = "0.3"
digest = "0.9"
base58 = "0.1"
ethers = { git = "https://github.com/gakonst/ethers-rs",tag="0.6.0",features=["legacy","abigen"]}
once_cell = "1.8.0"


[build-dependencies]
tonic-build = { version="0.7.2", features = ["prost"] }